<resources>
    <string name="app_name">ReMind</string>
    <string name="login">Iniciar sessió</string>
    <string name="introdueix_dni">Introdueix  el teu DNI</string>
    <string name="introdueix_contra">Introdueix la teva contrasenya</string>
    <string name="Register">Registrat</string>
    <string name="value_required">Camp obligatori</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_boton">Boton Afegir Secció</string>
    <string name="open">Obrir</string>
    <string name="close">Tancar</string>
    <string name="logout">Tancar Sessió</string>
    <string name="confirm_logout">Estas segur de tancar la sessió</string>
    <string name="si">Si</string>
    <string name="cancelar">Cancel·la</string>
    <string name="zoom_in_button_description">Acercar</string>
    <string name="zoom_out_button_description">Alejar</string>
    <string name="center_on_my_location_button_description">Mi Ubicación</string>
    <string name="Enrere">Enrere</string>
    <string name="Endavant">Endavant</string>
    <string name="Semana">Veure Setmana</string>
    <string name="welcome_back">Benvingut de nou!</string>
    <string name="login_to_continue">Siusplau inicia sessió al teu compte</string>
    <string name="email">Dni</string>
    <string name="password">Contrasenya</string>
    <string name="sign_in">Accedir</string>
    <string name="create_new_account">Crea un nou compte</string>
    <string name="add_image">Fica una imatge</string>
    <string name="name">Nom i Cognoms</string>
    <string name="confirm_password">Tèlefon</string>
    <string name="sign_up">Registrat</string>
    <string name="select_user">Selecciona els usuaris</string>
    <string name="type_a_message">Escriu un Missatge</string>
    <string name="online">Online</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="enter_your_destination">Enter your destination</string>
    <string name="get_direction">Get Direction</string>
    <string-array name="role_array">
        <item>Usuari</item>
        <item>Tutor</item>
    </string-array>

</resources>