<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".Maps">

    <EditText
        android:id="@+id/etFromLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />
    <EditText
        android:id="@+id/etToLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_destination"
        app:layout_constraintEnd_toEndOf="@+id/etFromLocation"
        app:layout_constraintStart_toStartOf="@+id/etFromLocation"
        app:layout_constraintTop_toBottomOf="@+id/etFromLocation" />
    <Button
        android:id="@+id/btnGetDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/get_direction"
        app:layout_constraintEnd_toEndOf="@+id/etToLocation"
        app:layout_constraintStart_toStartOf="@+id/etToLocation"
        app:layout_constraintTop_toBottomOf="@+id/etToLocation" />


</androidx.constraintlayout.widget.ConstraintLayout>